--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "example": "npm run build && node example/app.js",
     "doc": "gitbook init && rimraf _book/ && gitbook build && http-server -p 8880",
     "rename": "node rename.js",
-    "release": "npm test && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish --access=public"
+    "release": "npm test && npm run build && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish --access=public"
   },
   "keywords": [
     "rollup",
