--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@careteen/is",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "is",
-  "main": "dist/index.cjs.js",
+  "main": "dist/index.js",
   "module": "dist/index/esm.js",
   "unpkg": "dist/index/min.js",
   "scripts": {
